mariadb sort of working

--- a/mariadb-galera/config/my.cnf
+++ b/mariadb-galera/config/my.cnf
@@ -49,15 +49,15 @@ skip-external-locking
 #
 # * Fine Tuning
 #
-max_connections   = {{cfg.max_connections}}
-connect_timeout   = {{cfg.connect_timeout}} 
-wait_timeout    = {{cfg.wait_timeout}}
-max_allowed_packet  = {{cfg.max_allowed_packet}}
-thread_cache_size       = {{cfg.thread_cache_size}}
-sort_buffer_size  = {{cfg.sort_buffer_size}}
-bulk_insert_buffer_size = {{cfg.bulk_insert_buffer_size}}
-tmp_table_size    = {{cfg.tmp_table_size}}
-max_heap_table_size = {{cfg.max_heap_table_size}}
+max_connections   = 100
+connect_timeout   = 5
+wait_timeout    = 600
+max_allowed_packet  = 16M
+thread_cache_size       = 128
+sort_buffer_size  = 4M
+bulk_insert_buffer_size = 16M
+tmp_table_size    = 32M
+max_heap_table_size = 32M
 #
 # * MyISAM
 #
@@ -75,8 +75,8 @@ read_rnd_buffer_size  = 1M
 # * Query Cache Configuration
 #
 # Cache only tiny result sets, so we can fit more in the query cache.
-query_cache_limit   = {{cfg.query_cache_limit}}
-query_cache_size    = {{cfg.query_cache_size}}
+query_cache_limit   = 128K
+query_cache_size    = 64M
 # for more write intensive setups, set to DEMAND or OFF
 #query_cache_type   = DEMAND
 #
@@ -93,7 +93,7 @@ general_log_file        = {{pkg.svc_data_path}}/log/mysql.log
 log_error = {{pkg.svc_data_path}}/log/mysql.log
 
 # we do want to know about network errors and such
-log_warnings    = {{ cfg.log_warnings}}
+log_warnings    = 2
 #
 # Enable the slow query log to see queries with especially long duration
 #slow_query_log[={0|1}]
@@ -133,15 +133,15 @@ max_binlog_size         = 100M
 #
 # InnoDB is enabled by default with a 10MB datafile in /var/lib/mysql/.
 # Read the manual for more InnoDB related options. There are many!
-default_storage_engine  = {{cfg.default_storage_engine}}
+default_storage_engine  = InnoDB
 # you can't just change log file size, requires special procedure
 #innodb_log_file_size = 50M
-innodb_buffer_pool_size = {{cfg.innodb_buffer_pool_size}}
-innodb_log_buffer_size  = {{cfg.innodb_log_buffer_size}}
-innodb_file_per_table = {{cfg.innodb_file_per_table}}
-innodb_open_files = {{cfg.innodb_open_files}}
-innodb_io_capacity  = {{cfg.innodb_io_capacity}}
-innodb_flush_method = {{cfg.innodb_flush_method}}
+innodb_buffer_pool_size = 256M
+innodb_log_buffer_size  = 8M
+innodb_file_per_table = 1
+innodb_open_files = 400
+innodb_io_capacity  = 400
+innodb_flush_method = O_DIRECT
 #
 # * Security Features
 #
@@ -171,4 +171,5 @@ key_buffer    = 16M
 # * IMPORTANT: Additional settings that can override those from this file!
 #   The files must end with '.cnf', otherwise they'll be ignored.
 #
+!include {{pkg.svc_config_path}}/cluster.cnf
 !includedir {{pkg.svc_config_path}}/conf.d
